Fix map header styling gap

--- a/app/styles/_map.scss
+++ b/app/styles/_map.scss
@@ -1,4 +1,4 @@
-#mymap { top:190px; left:0; right:0; bottom:0; position:absolute; }
+#mymap { top:170px; left:0; right:0; bottom:0; position:absolute; }
 
 .filterHeader {
     height: 120px;
